# perception_blort

./: .gitignore  README.md  rosdep.yaml  stack.xml  switch-to-catkin.sh  switch-to-rosbuild.sh  tracking_histogram_with_kinect.launch
blort/: CHANGELOG.rst  CMakeLists.catkin.txt  CMakeLists.rosbuild.txt  CMakeLists.txt  manifest.xml  package.xml  rosdep.yaml
blort/include/blort/GLWindow/: GLEvent.h  GLInput.h  GLWindow.h  glxhidingwindow.h
blort/include/blort/Recognizer3D/: Array.hh  Array.ic  CodebookEntry.hh  CodebookEntry.ic  Config.hh  ConfigFile.hh  Definitions.hh  DetectGPUSIFT.hh  DetectSIFT.hh  Except.hh  Geometry.hh  Geometry.ic  Homography.hh  Homography.ic  KeyClusterPair.hh  Keypoint.hh  KeypointDescriptor.hh  KeypointPair.hh  Math.hh  Math.ic  ModelObject3D.hh  ODetect3D.hh  Object3D.hh  PNamespace.hh  PoseCv.hh  Recognizer3D.h  SDraw.hh  SMatrix.hh  SMatrix.ic  SPolygon.hh  Vector2.hh  Vector2.ic  Vector3.hh  Vector3.ic  cvgeometry.h  headers.h
blort/include/blort/ThreadObject/: CameraThread.h  EventClass.h  MutexClass.h  RecognizerThread.h  Thread.h  TomGineThread.h
blort/include/blort/TomGine/: PlyStructure.h  headers.h  tgCamera.h  tgCollission.h  tgEngine.h  tgError.h  tgErrorMetric.h  tgFont.h  tgFrustum.h  tgGUI.h  tgImageProcessor.h  tgLabel.h  tgLighting.h  tgMaterial.h  tgMathlib.h  tgMatrix3.h  tgModel.h  tgModelLoader.h  tgPlot2D.h  tgPose.h  tgQuaternion.h  tgRenderModel.h  tgShader.h  tgShapeCreator.h  tgTexture.h  tgTimer.h  tgVector3.h  xtgSerialize.h
blort/include/blort/Tracker/: CDataFile.h  CameraThread.h  Distribution.h  EdgeTracker.h  Filter.h  ImageProcessor.h  ModelEntry.h  ModelLoader.h  Noise.h  Particle.h  PlyStructure.h  Predictor.h  Resources.h  Shader.h  Timer.h  (+12 more)
blort/src/GLWindow/: GLXWindow.cpp  GLXWindowGetEvent.cpp  glxhidingwindow.cpp
blort/src/Recognizer3D/: CodebookEntry.cc  Config.cc  ConfigFile.cc  Definitions.cc  DetectGPUSIFT.cc  DetectSIFT.cc  Except.cc  Geometry.cc  Homography.cc  Keypoint.cc  KeypointDescriptor.cc  Math.cc  ModelObject3D.cc  ODetect3D.cc  Object3D.cc  PoseCv.cc  README  Recognizer3D.cpp  SDraw.cc  SPolygon.cc  Vector2.cc  Vector3.cc
blort/src/ThreadObject/: CameraThread.cpp  EventClass.cpp  MutexClass.cpp  RecognizerThread.cpp  Thread.cpp  TomGineThread.cpp  main.cpp
blort/src/TomGine/: README  main.cpp  ply.c  tgCamera.cpp  tgCollission.cpp  tgEngine.cpp  tgError.cpp  tgErrorMetric.cpp  tgFont.cpp  tgFrustum.cpp  tgGUI.cpp  tgImageProcessor.cpp  tgLabel.cpp  tgLighting.cpp  tgMaterial.cpp  tgMathlib.cpp  tgMatrix3.cpp  tgModel.cpp  tgModelLoader.cpp  tgPlot2D.cpp  tgPose.cpp  tgQuaternion.cpp  tgRenderModel.cpp  tgShader.cpp  tgShapeCreator.cpp  tgTexture.cpp  tgTimer.cpp  tgVector3.cpp
blort/src/Tracker/: CDataFile.cpp  CameraThread.cpp  Distribution.cpp  EdgeTracker.cpp  ImageProcessor.cpp  ModelEntry.cpp  ModelLoader.cpp  Noise.cpp  Particle.cpp  Predictor.cpp  README  Resources.cpp  Shader.cpp  ShaderUtils.cpp  Texture.cpp  TextureTracker.cpp  Timer.cpp  Tracker.cpp  TrackerModel.cpp  TrackerThread.cpp  myPredictor.cpp  ply.c
blort/src/blort/: ObjectEntry.cpp  pal_util.cpp
blort_msgs/: .gitignore  CMakeLists.txt  mainpage.dox  package.xml
blort_msgs/action/: Recognize.action
blort_msgs/srv/: RecoveryCall.srv  TrackerCommand.srv
blort_ros/: .gitignore  CHANGELOG.rst  CMakeLists.catkin.txt  CMakeLists.rosbuild.txt  CMakeLists.txt  detector_params.yaml  manifest.xml  package.xml
blort_ros/Resources/: pringles_single_stereo_image.bag
blort_ros/Resources/bags/: pringles_single_stereo_image.bag
blort_ros/Resources/ply/: Aquarius.ply  Barritas.ply  Cocacola.ply  CokeCan.ply  CokeCan2.ply  JuiceBox.ply  JuiceBox2.ply  Manzanilla.ply  Pharmaton.ply  Pringles.ply  Pringoals.ply
blort_ros/Resources/sift/: Aquarius_reem.sift  Barritas_reem.sift  Cocacola_reem.sift  JuiceBox.sift  Manzanilla.sift  Pharmaton1.sift  Pringles.sift
blort_ros/Tracker/shader/: difference.frag  difference.vert  edgetest.frag  edgetest.vert  gauss.frag  mmConfidence.frag  sobel.frag  spreading.frag  texColorTest.frag  texEdgeTest.frag  texturing.frag  texturing.vert  thinning.frag
blort_ros/cfg/: Detector.cfg  Tracker.cfg  Tracker.cfg.rosbuild  detector.cfg  tracker.cfg
blort_ros/config/: default_tabletop_histogram.yaml  tracking.ini  tracking_juicebox.ini  tracking_multisift.ini
blort_ros/include/blort_ros/: ObjectEntry.h  detector_node.h  gldetector.h  gltracker.h  pose_util.h  tracker_node.h  trackerinterface.hpp
blort_ros/launch/: blort_reem.launch  histogram_segment.launch  learnsifts.launch  singleshot_disparity.launch  singleshot_histogram.launch  singleshot_template.launch  tracking.launch  tracking_disparity.launch  tracking_disparity_and_histogram.launch  tracking_histogram.launch  tracking_histogram_with_kinect.launch  view_control.launch
blort_ros/msg/: TrackerConfidences.msg
blort_ros/src/: ObjectEntry.cpp  ObjectEntry.h  gldetector.cpp  gldetector.h  gltracker.cpp  gltracker.h  osmesacontext.cpp  osmesacontext.h  pal_util.h  pose_util.cpp  trackerinterface.hpp
blort_ros/src/nodes/: call_SingleShot.py  detector_node.cpp  detector_node.h  learnsifts.cpp  pose2Tf.cpp  pose2Tf_repeat.cpp  pose_utils.py  testSingleShot.py  testSingleShot2.py  tracker_node.cpp  tracker_node.h
blort_ros/srv/: RecoveryCall.srv  SetCameraInfo.srv  TrackerCommand.srv
blort_ros/test/: testImageProcessor.cpp
blort_ros_msgs/: .gitignore  CMakeLists.catkin.txt  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
blort_ros_msgs/action/: Recognize.action
blort_ros_msgs/msg/: ObjectPose.msg  TrackerResults.msg
blort_ros_msgs/srv/: EstimatePose.srv  TrackerCommand.srv
perception_blort/: CHANGELOG.rst  CMakeLists.txt  package.xml
siftgpu/: CHANGELOG.rst  CMakeLists.rosbuild.txt  CMakeLists.txt  Makefile  Makefile.original  alt_makefile_inside  manifest.xml  package.xml  rosdep.yaml  siftgpu.zip.md5sum
siftgpu/include/: LiteWindow.h  ProgramCL.h  ProgramGLSL.h  ProgramGPU.h  SiftGPU.h
siftgpu/src/: GLTexImage.cpp  GlobalUtil.cpp  ProgramGLSL.cpp  PyramidGL.cpp  SiftGPU.cpp  SiftPyramid.cpp
(+2 files in other folders)
