<?xml version="1.0"?>
<package>
  <name>blort</name>
  <version>2.2.0</version>
  <description>
    BLORT - The Blocks World Robotic Vision Toolbox <br/>
    Ported and refactored version of the library.
  </description>

  <author>Michael Zillich</author>
  <author>Thomas Mörwald</author>
  <author>Johann Prankl</author>
  <author>Andreas Richtsfeld</author>
  <author>Bence Magyar (ROS version)</author>

  <license>BSD</license>
  <url>http://ros.org/wiki/blort</url>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>siftgpu</build_depend>
  <build_depend>OpenGL</build_depend>
  <build_depend>GLUT</build_depend>
  <run_depend>siftgpu</run_depend>

  <export>
  </export>
</package>
