<package>
  <name>blort_ros</name>
  <version>0.1.1</version>
  <description>
    BLORT - The Blocks World Robotic Vision Toolbox <br/>
    ROS interface classes and nodes for the BLORT library.
  </description>
  <maintainer email="bencemagyar@pal-robotics.com">Bence Magyar</maintainer>
  <license>BSD</license>
  <author email="bencemagyar@pal-robotics.com">Bence Magyar</author>
  <url>http://ros.org/wiki/blort_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>blort</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>blort_ros_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>blort</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>blort_ros_msgs</run_depend>

</package>
