<package>
  <name>blort_ros_msgs</name>
  <version>0.1.1</version>
  <description>
    This package defines messages used by BLORT ROS interface
  </description>
  <maintainer email="bencemagyar@pal-robotics.com">Bence Magyar</maintainer>
  <license>BSD</license>
  <author email="bencemagyar@pal-robotics.com">Bence Magyar</author>
  <url>http://ros.org/wiki/blort_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
